# self-hosted

./: .craft.yml  .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.hypertrack  Dockerrun.aws.json  LICENSE  LICENSE.md  Makefile  Makefile.hypertrack  Procfile  README-zh.md  README.md  README.rst  action.yaml  app.json  buildspec.hypertrack.yml  clean.sh  clickhouse-deployment.yaml  cloudbuild.yaml  codecov.yml  config.yml  cron-claim1-persistentvolumeclaim.yaml  cron-deployment.yaml  dcrrelay  docker-compose-base.yml  docker-compose-sentry.service  docker-compose.env.yml  docker-compose.web.yml  docker-compose.yml  docker-compose.yml.example  docker_cleanup.sh  (+64 more)
.ebextensions/: 00_setup.config
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
_integration-test/: backup.py  conftest.py  ensure-backup-restore-works.sh  ensure-customizations-not-present.sh  ensure-customizations-work.sh  ensure-sentry-admin-works.sh  run.py  run.sh  test_01_basics.py  test_02_backup.py  test_backup.py  test_run.py
_integration_tests/: cert-test.py  docker-compose.test.yml  run.sh  setup.sh  teardown.sh
_unit-test/: _test_setup.sh  bootstrap-s3-nodestore-test.sh  bootstrap-s3-profiles-test.sh  bootstrap-s3-seaweed-test.sh  check-memcached-backend-test.sh  create-docker-volumes-test.sh  ensure-relay-credentials-test.sh  ensure-secret-key-test.sh  error-handling-test.sh  geoip-test.sh  js-sdk-assets-test.sh  merge-env-file-test.sh  migrate-pgbouncer-test.sh  (+4 more)
(+192 files in other folders)
